Site navbar and body margins

--- a/app/templates/knowledgebase/question_card.html
+++ b/app/templates/knowledgebase/question_card.html
@@ -1,7 +1,4 @@
-{# myapp/templates/knowledgebase/module_card.html #}
-{# Assume that we are passed in a variable called 'module' #}
-{# A macro plugin for a Module card #}
-{% macro module_card(module) %}
+{% macro question_card(question) %}
    <div class="ui special cards">
      <div class="card">
        <div class="blurring dimmable image">
