--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -24,32 +24,41 @@
                 <!-- Browser tab name -->
                 <title>{{ title }}</title>
                 <!-- Navbar -->
-                <div class="ui attached inverted menu">
-                    {{ m.nav_link('knowledgebase.home', 'Home') }} #}
-                    {#{{ m.nav_link('map', 'Map') }}
-                    {{ m.nav_link('contact', 'Contact') }}#}
-                    <div class="right menu">
-                    {#
-                        <!-- User is logged in -->
-                        {% if current_user.is_authenticated %}
-                            <div class="item">
-                                <a class="ui primary button" href="/user/account">{{ current_user.name }} {{ current_user.surname }}</a>
-                            </div>
-                            <div class="item">
-                                <a class="ui default button" href="/user/signout">Sign out</a>
-                            </div>
-                        <!-- User is not logged in -->
-                        {% else %}
-                            <div class="item">
-                                <a class="ui primary button" href="/user/signin">Sign in</a>
-                            </div>
-                            <div class="item">
-                                <a class="ui default button" href="/user/signup">Sign up</a>
-                            </div>
-                        {% endif %}
-                    #}
+                    <div class="ui attached inverted menu">
+                        {{ m.nav_link('knowledgebase.home', 'Home') }} #}
+
+                        <div class="ui search">
+                          <div class="ui icon input">
+                            <input class="prompt" type="text" placeholder="Search for modules...">
+                            <i class="search icon"></i>
+                          </div>
+                          <div class="results"></div>
+                        </div>
+
+                        {#{{ m.nav_link('map', 'Map') }}
+                        {{ m.nav_link('contact', 'Contact') }}#}
+                        <div class="right menu">
+                        {#
+                            <!-- User is logged in -->
+                            {% if current_user.is_authenticated %}
+                                <div class="item">
+                                    <a class="ui primary button" href="/user/account">{{ current_user.name }} {{ current_user.surname }}</a>
+                                </div>
+                                <div class="item">
+                                    <a class="ui default button" href="/user/signout">Sign out</a>
+                                </div>
+                            <!-- User is not logged in -->
+                            {% else %}
+                                <div class="item">
+                                    <a class="ui primary button" href="/user/signin">Sign in</a>
+                                </div>
+                                <div class="item">
+                                    <a class="ui default button" href="/user/signup">Sign up</a>
+                                </div>
+                            {% endif %}
+                        #}
+                        </div>
                     </div>
-                </div>
             {% endblock %}
         </div>
         <!-- Message flashing -->
@@ -73,6 +82,7 @@
                     </div>
                     <div class="item">
                         <a href="https://github.com/frizensami/botmother"><i class="github icon"></i></a>
+                    <!-- Find theme at Flask-Boilerplate -->
                     </div>
                 </div>
             </div>
