--- a/app/templates/knowledgebase/question_card.html
+++ b/app/templates/knowledgebase/question_card.html
@@ -1,26 +1,16 @@
 {% macro question_card(question) %}
    <div class="ui special cards">
      <div class="card">
-       <div class="blurring dimmable image">
-         <div class="ui dimmer">
-           <div class="content">
-             <div class="center">
-               <div class="ui inverted button">Add Channel</div>
-             </div>
-           </div>
-         </div>
-         <img src="{{url_for('static', filename='404.jpg')}}">
-       </div>
        <div class="content">
-         <a class="header">{{module.name.upper()}}</a>
+         <a class="header">{{question.text}}</a>
          <div class="meta">
-           {#<span class="date">{{module.questions|length}}</span>#}
+          {{question.user.name}}
          </div>
        </div>
        <div class="extra content">
          <a>
            <i class="users icon"></i>
-           {{module.users|length}} Members
+            {{question.answers.all()|length}} Answers
          </a>
        </div>
      </div>
