more ui, pluralize, navigation buttons. Going to try semantic ui from npm/gulp/bower

--- a/app/templates/knowledgebase/cards/answer_card.html
+++ b/app/templates/knowledgebase/cards/answer_card.html
@@ -10,7 +10,7 @@
        <div class="extra content">
          <a>
            <i class="users icon"></i>
-            {{answer.votes.count()}} Votes
+            {{answer.votes.count()}} Vote{{answer.votes.count()|pluralize}}
          </a>
        </div>
      </div>
