--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,2 +1,2 @@
-<center> <h1> 404 Error </h1> </center>
+<center> <h1> Sorry, we couldn't find that page! (404 Error) </h1> </center>
 <center> <img src={{url_for('static', filename = '404.jpg')}}></img> </center>
