--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,7 +25,8 @@
                 <title>{{ title }}</title>
                 <!-- Navbar -->
                     <div class="ui attached inverted menu">
-                        {{ m.nav_link('knowledgebase.home', 'Home') }} #}
+                        {{ m.nav_link('homepage', 'Home') }} #}
+                        {{ m.nav_link('knowledgebase.home', 'Modules') }} #}
 
                         <div class="ui search">
                           <div class="ui icon input">
