Added containers to make layout more sensible, made menu look cleaner

--- a/app/templates/knowledgebase/home.html
+++ b/app/templates/knowledgebase/home.html
@@ -22,7 +22,7 @@ var content = {{ search_content|safe }}
 });
 </script>
 {% if modules|length > 0 %}
-    <div class="ui five column grid">
+    <div class="ui four column grid">
         {% for module in modules %}
             <div class="column">
                 {{mc.module_card(module)}}
