--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,10 +3,9 @@
 {% import "macros.html" as m %}
 <!DOCTYPE html>
 <html lang="en">
-    <div id="container">
         <div id="header">
             {% block head %}
-                <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
+                <meta name='viewport' content='initial-scale=0.5,maximum-scale=1,user-scalable=no'/>
                 <meta charset="UTF-8">
                 <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
                 <!-- jQuery -->
@@ -26,13 +25,14 @@
                 <script src={{url_for('static', filename='bower_components/semantic/dist/semantic.min.js')}}>
                 </script>
                 <!-- Custom CSS -->
-                <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+                <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">-->
                 <!-- Browser tab name -->
                 <title>{{ title }}</title>
                 <!-- Navbar -->
-                    <div class="ui attached inverted menu">
-                        {{ m.nav_link('homepage', 'Home') }} #}
-                        {{ m.nav_link('knowledgebase.home', 'Modules') }} #}
+                <div class="ui container">
+                    <div class="ui secondary pointing  menu">
+                        {{ m.nav_link('homepage', 'Home') }}
+                        {{ m.nav_link('knowledgebase.home', 'Modules') }}
 
                         <div class="ui search">
                           <div class="ui icon input">
@@ -66,6 +66,8 @@
                         #}
                         </div>
                     </div>
+                </div>
+                <br>
             {% endblock %}
         </div>
         <!-- Message flashing -->
@@ -79,8 +81,15 @@
             {% endif %}
         {% endwith %}
         <div id="body" class="body">
-            {% block content %}{% endblock %}
+            <div class="pusher">
+            <div class="ui container">
+                <div class="full height">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
+            </div>
         </div>
+        <div class="ui container">
         <div id="footer">
             <div class="ui divider"></div>
                 <div class="ui divided horizontal footer link list">
@@ -94,5 +103,5 @@
                 </div>
             </div>
         </div>
-    </div>
+        </div>
 </html>
