--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1,5 +1,10 @@
-/* Layout */
 
+.custom-borderless {
+   border-style: none !important;
+}
+
+/* Layout */
+/*
 html,
 
 body {
@@ -24,11 +29,10 @@ body {
 #footer {
    bottom: 0;
    width: 100%;
-   height: 50px;   /* Height of the footer */
+   height: 50px;
    text-align: center;
 }
 
-/* Forms */
 
 .form-user {
    width: 33% !important;
@@ -40,14 +44,14 @@ body {
    color: #E50000 !important;
 }
 
-/* Flask flashes */
 
 .flash {
    margin-right: 20px !important;
 }
 
-/* Errors */
 
 .error-box {
    margin-top: 8%;
 }
+
+*/
