--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,7 +25,7 @@
                 <script src={{url_for('static', filename='bower_components/semantic/dist/semantic.min.js')}}>
                 </script>
                 <!-- Custom CSS -->
-                <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">-->
+                <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
                 <!-- Browser tab name -->
                 <title>{{ title }}</title>
                 <!-- Navbar -->
@@ -36,7 +36,7 @@
 
                         <div class="ui search">
                           <div class="ui icon input">
-                            <input class="prompt" type="text" placeholder="Search for modules...">
+                            <input class="custom-borderless prompt" type="text" placeholder="Search for modules">
                             <i class="search icon"></i>
                           </div>
                           <div class="results"></div>
