Added function to get web link for question id, addresses #7

--- a/app/templates/knowledgebase/cards/module_card.html
+++ b/app/templates/knowledgebase/cards/module_card.html
@@ -23,7 +23,7 @@
        <div class="extra content">
          <a>
            <i class="users icon"></i>
-           {{module.users|length}} Members
+           {{module.users|length}} Member{{module.users|length|pluralize}} | {{module.questions.count()}} Question{{module.questions.count()|pluralize}}
          </a>
        </div>
      </div>
