--- a/app/templates/knowledgebase/cards/answer_card.html
+++ b/app/templates/knowledgebase/cards/answer_card.html
@@ -1,18 +1,75 @@
 {% macro answer_card(answer) %}
-   <div class="ui special cards">
-     <div class="card">
-       <div class="content">
-         <a class="header">{{answer.text}}</a>
-         <div class="meta">
-          {{answer.user.name}}
-         </div>
-       </div>
-       <div class="extra content">
-         <a>
-           <i class="users icon"></i>
-            {{answer.votes.count()}} Vote{{answer.votes.count()|pluralize}}
-         </a>
-       </div>
-     </div>
-   </div>
+  <div class="comment">
+    <a class="avatar">
+      <img src="../../static/404.jpg">
+    </a>
+    <div class="content">
+      <a class="author">{{answer.user.name}}</a>
+      <div class="metadata">
+        <span class="date">Today at 5:42PM</span>
+        <i class="users icon"></i>
+        <span class="votes">{{answer.votes.count()}} Vote{{answer.votes.count()|pluralize}}</span>
+      </div>
+      <div class="text">{{answer.text}}</div>
+      <div class="actions">
+        <a class="reply">Reply</a>
+      </div>
+    </div>
+  </div>
+      
+  <div class="comment">
+    <a class="avatar">
+      <img src="../../static/404.jpg">
+    </a>
+    <div class="content">
+      <a class="author">Matt</a>
+      <div class="metadata">
+        <span class="date">Today at 5:42PM</span>
+      </div>
+      <div class="text">
+        How artistic!
+      </div>
+      <div class="actions">
+        <a class="reply">Reply</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="comment">
+    <a class="avatar">
+      <img src="../../static/404.jpg">
+    </a>
+    <div class="content">
+      <a class="author">Elliot Fu</a>
+      <div class="metadata">
+        <span class="date">Yesterday at 12:30AM</span>
+      </div>
+      <div class="text">
+        <p>This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well!</p>
+      </div>
+      <div class="actions">
+        <a class="reply">Reply</a>
+      </div>
+    </div>
+    <div class="comments">
+      <div class="comment">
+        <a class="avatar">
+          <img src="../../static/404.jpg">
+        </a>
+        <div class="content">
+          <a class="author">Jenny Hess</a>
+          <div class="metadata">
+            <span class="date">Just now</span>
+          </div>
+          <div class="text">
+            Elliot you are always so right :)
+          </div>
+          <div class="actions">
+            <a class="reply">Reply</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endmacro %}
