--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -12,6 +12,7 @@
           <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form" class="ui large form">
           <div class="ui stacked secondary  segment">
           {{ register_user_form.hidden_tag() }}
+          {{ render_field_with_errors(register_user_form.name) }}
           {{ render_field_with_errors(register_user_form.email) }}
           {{ render_field_with_errors(register_user_form.password) }}
           {% if register_user_form.password_confirm %}
