--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -6,7 +6,8 @@
       <div class="column custom-column">
           <h2 class="ui custom-image header">
             <div class="content">
-              Welcome to the Knowledgebase Family!
+              Type /verify into your Telegram chat with NUS Questions Bot to receive your
+              One-Time password!
             </div>
           </h2>
           <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form" class="ui large form">
