UI Changes. Random color for cards. Support raising of cards on mouse hover.

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1,3 +1,7 @@
+.custom-center {
+   margin-left: auto !important;
+   margin-right: auto !important;
+}
 
 .custom-borderless {
    border-style: none !important;
