--- a/app/templates/knowledgebase/cards/answer_card.html
+++ b/app/templates/knowledgebase/cards/answer_card.html
@@ -25,6 +25,8 @@
       <a class="author">Matt</a>
       <div class="metadata">
         <span class="date">Today at 5:42PM</span>
+        <i class="users icon"></i>
+        <span class="votes">2 Votes</span>
       </div>
       <div class="text">
         How artistic!
@@ -43,6 +45,8 @@
       <a class="author">Elliot Fu</a>
       <div class="metadata">
         <span class="date">Yesterday at 12:30AM</span>
+        <i class="users icon"></i>
+        <span class="votes">2 Votes</span>
       </div>
       <div class="text">
         <p>This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well! This has been very useful for my research. Thanks as well!</p>
@@ -60,12 +64,11 @@
           <a class="author">Jenny Hess</a>
           <div class="metadata">
             <span class="date">Just now</span>
+            <i class="users icon"></i>
+            <span class="votes">2 Votes</span>
           </div>
           <div class="text">
             Elliot you are always so right :)
-          </div>
-          <div class="actions">
-            <a class="reply">Reply</a>
           </div>
         </div>
       </div>
