--- a/app/templates/knowledgebase/cards/module_card.html
+++ b/app/templates/knowledgebase/cards/module_card.html
@@ -2,7 +2,8 @@
 {# Assume that we are passed in a variable called 'module' #}
 {# A macro plugin for a Module card #}
 {% macro module_card(module) %}
-   <div class="ui special cards">
+  {% set selected_color = random_color() %}
+   <div class="{{selected_color}} ui link special cards">
      <div class="card">
        <!--<div class="blurring dimmable image">
          <div class="ui dimmer">
