--- a/app/templates/knowledgebase/cards/question_card.html
+++ b/app/templates/knowledgebase/cards/question_card.html
@@ -1,17 +1,16 @@
 {% macro question_card(question) %}
-   <div class="ui special cards">
-     <div class="ui container card">
+  {% set selected_color = random_color() %}
+   <div class="{{selected_color}} ui link special cards">
+     <div class="ui card" style="width:100%">
        <div class="content">
          <a href="{{url_for('knowledgebase.question', question_id=question.id)}}" class="header">{{question.text}}</a>
-         <div class="meta">
-          {{question.user.name}}
-         </div>
        </div>
-       <div class="extra content">
-         <a>
-           <i class="users icon"></i>
-            {{question.answers.count()}} Answer{{question.answers.count()|pluralize}}
-         </a>
+       <div class="extra content" style="padding-bottom:5px; padding-top:5px">
+         <i class="users icon" style="margin-top: 3px"></i> 
+         {{question.answers.count()}} Answer{{question.answers.count()|pluralize}}
+         <div class="right floated author">
+            <img class="ui avatar image" src="../../static/404.jpg"> Matt
+         </div>
        </div>
      </div>
    </div>
