--- a/app/templates/knowledgebase/channel.html
+++ b/app/templates/knowledgebase/channel.html
@@ -3,15 +3,30 @@
 
 {% block content %}
 <!-- Code for Module Cards to dim and show text-->
+
+<h3 class="ui header floated left" style="margin-bottom:0px; color:teal">{{channel_name.upper()}}</h3>
+
 {% if questions.all()|length > 0 %}
-    <div class="ui two column grid container">
-        {% for question in questions %}
-            <div class="column">
-                {{qc.question_card(question)}}
-            </div>
-        {% endfor %}
+	
+	<p class="ui header">Newest</p>	
+  {% for question in questions %}
+    <div class="column">
+      {{qc.question_card(question)}}
     </div>
+  {% endfor %}
+
+	<p class="ui header">Highly Voted</p>	
+  {% for question in questions %}
+    <div class="column">
+      {{qc.question_card(question)}}
+    </div>
+  {% endfor %}
+
 {% else %}
-    <h1> No questions for this module yet! </h1>
+	<div class="text" align="center">
+    <h3 class="ui teal header"> No questions for this module yet </h3>
+    <p style="color: teal"> Be the first to ask a question! Head over to the our Telegram bot by searching @NUSQuestionsBot!</p>
+	</div>
 {% endif %}
+
 {% endblock %}
