--- a/app/templates/knowledgebase/question.html
+++ b/app/templates/knowledgebase/question.html
@@ -2,21 +2,42 @@
 {% import 'knowledgebase/cards/answer_card.html' as ac %}
 
 {% block content %}
+{% set selected_color = random_color() %}
 <!-- Code for Module Cards to dim and show text-->
 
 </script>
-{% if answers.all()|length > 0 %}
-    <div class="ui one column grid container centered padded">
-      <div class="ui comments">
-      	<h3 class="ui dividing header">{{answers[0].question.text}}</h3>
-          {% for answer in answers %}
-              <div class="column centered">
-                  {{ac.answer_card(answer)}}
-              </div>
-          {% endfor %}
+  <div class="ui one column grid container padded">
+    <div class="ui comments custom-center">
+
+      <div class="comment">
+        <a class="avatar" style="margin-top:-5px">
+          <img src="../../static/404.jpg">
+        </a>
+        <div class="content">
+          <span class="author">Author</span>
+          <div class="metadata">
+            <span class="date">Today at 5:42PM</span>
+            <i class="users icon"></i>
+            <span class="votes">3 Votes</span>
+          </div>
+          <button class="ui mini green basic right floated button" style="margin-top:-2px">Reply</button>
+        </div>
       </div>
-    </div>
+
+    	<h3 class="{{selected_color}} ui dividing link card centered" style="padding-bottom:10px; width:100%; padding: 10px">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem </h3>
+
+{% if answers.all()|length > 0 %}
+      {% for answer in answers %}
+        {{ac.answer_card(answer)}}
+      {% endfor %}
+
 {% else %}
-    <h1> No answers for this question yet! </h1>
-{% endif %}
+    <div class="text" align="center">
+      <h3 class="ui teal header"> No answers for this question yet</h3>
+      <p style="color: teal"> Be the first one to answer the question and earn bonus points ^^!</p>
+    </div>
+{% endif %} 
+
+    </div>
+  </div>  
 {% endblock %}
