More UI changes. Added module name header to the question and answers section

--- a/app/templates/knowledgebase/cards/module_card.html
+++ b/app/templates/knowledgebase/cards/module_card.html
@@ -16,13 +16,13 @@
          <img src="{{url_for('static', filename='404.jpg')}}">
        </div>-->
        <div class="content">
-         <a href="{{url_for('knowledgebase.channel', channel_name=module.name)}}"" class="header">{{module.name.upper()}}</a>
+         <a href="{{url_for('knowledgebase.channel', channel_name=module.name)}}" class="header">{{module.name.upper()}}</a>
          <div class="meta">
            {#<span class="date">{{module.questions|length}}</span>#}
          </div>
        </div>
        <div class="extra content">
-         <a>
+         <a href="{{url_for('knowledgebase.channel', channel_name=module.name)}}">
            <i class="users icon"></i>
            {{module.users|length}} Member{{module.users|length|pluralize}} | {{module.questions.count()}} Question{{module.questions.count()|pluralize}}
          </a>
