--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,7 +31,7 @@
                 <!-- Navbar -->
                 <div class="ui container">
                     <div class="ui secondary pointing  menu">
-                        {{ m.nav_link('homepage', 'Home') }}
+                        <!--{{ m.nav_link('homepage', 'Home') }}-->
                         {{ m.nav_link('knowledgebase.home', 'Modules') }}
 
                         <div class="right menu">
