--- a/app/templates/knowledgebase/cards/question_card.html
+++ b/app/templates/knowledgebase/cards/question_card.html
@@ -3,14 +3,16 @@
    <div class="{{selected_color}} ui link special cards">
      <div class="ui card" style="width:100%">
        <div class="content">
-         <a href="{{url_for('knowledgebase.question', question_id=question.id)}}" class="header">{{question.text}}</a>
+          <a href="{{url_for('knowledgebase.question', question_id=question.id)}}" class="header">{{question.text}}</a>
        </div>
        <div class="extra content" style="padding-bottom:5px; padding-top:5px">
-         <i class="users icon" style="margin-top: 3px"></i> 
-         {{question.answers.count()}} Answer{{question.answers.count()|pluralize}}
-         <div class="right floated author">
+          <a href="{{url_for('knowledgebase.question', question_id=question.id)}}">
+          <i class="users icon" style="margin-top: 3px"></i> 
+          {{question.answers.count()}} Answer{{question.answers.count()|pluralize}}
+          <div class="right floated author">
             <img class="ui avatar image" src="../../static/404.jpg"> Matt
-         </div>
+          </div>
+          </a>
        </div>
      </div>
    </div>
