Added OTP system

--- a/app/templates/auth/register_otp.html
+++ b/app/templates/auth/register_otp.html
@@ -7,7 +7,8 @@
       <div class="column custom-column">
           <h2 class="ui custom-image header">
             <div class="content">
-              Type /verify into your Telegram chat with NUS Questions Bot to
+              Have you used NUS Questions Bot on Telegram before? <br> <br>
+              Type <u>/verify</u> into your Telegram chat with NUS Questions Bot to
               get your One-Time password!
             </div>
           </h2>
@@ -19,4 +20,5 @@
           {{ render_field(form.submit, class='ui button large fluid green') }}
           </div>
           </form>
+          <h3> If not, please continue to the main page <a href="/">here</a></h3>
 {% endblock %}
