--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -6,8 +6,7 @@
       <div class="column custom-column">
           <h2 class="ui custom-image header">
             <div class="content">
-              Type /verify into your Telegram chat with NUS Questions Bot to receive your
-              One-Time password!
+             Welcome to the KnowledgeBase! Please register here.
             </div>
           </h2>
           <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form" class="ui large form">
