--- a/app/templates/knowledgebase/cards/answer_card.html
+++ b/app/templates/knowledgebase/cards/answer_card.html
@@ -1,7 +1,7 @@
 {% macro answer_card(answer, current_user, vote_status) %}
   <div class="comment">
-    <a class="avatar">
-      <img src="../../static/404.jpg">
+    <a class="ui avatar circular image">
+      <img src={{answer.user.get_url_for_image()}}>
     </a>
     <div class="content">
       <a class="author">{{answer.user.name}}</a>
@@ -15,7 +15,6 @@
       {% set has_upvoted = vote_status == 1 %}
       {% set has_downvoted = vote_status == -1 %}
 
-        <span class="date">{#{{answer.date_created}}#}</span>
           {% if current_user.is_authenticated %}
             {% if has_upvoted %}
             <button id={{upvote_id}} onclick={{upvote_function}} class="ui mini compact icon circular green button" style="margin-top: -5px">
@@ -36,6 +35,8 @@
             <i class="chevron down icon"></i>
             </button>
           {% endif %}
+
+        <span class="date">{{answer.date_created.strftime('%d %b %Y %H:%M')}}</span>
       </div>
       <div class="text">{{answer.text}}</div>
       <div class="actions">
