--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -3,33 +3,36 @@
 {# {% include "security/_messages.html" %} #}
 {% block content %}
 
+{% set selected_color = random_color() %}
+
 <div class="ui middle aligned center aligned grid">
   <div class="column custom-column">
-      <h2 class="ui custom-image header">
-        <div class="content">
-          Log-in to your account
-        </div>
-      </h2>
-      <form action="{{ url_for_security('login') }}" method="POST" name="login_user_form" class="ui large form">
-        {{ login_user_form.hidden_tag() }}
 
-        <div class="ui stacked secondary  segment">
-                {{ render_field_with_errors(login_user_form.email) }}
-                {{ render_field_with_errors(login_user_form.password) }}
-            <!--
-            <div class="field">
-                {{ render_field_with_errors(login_user_form.remember, class="ui checkbox") }}
-            </div>
-            -->
-              {{ render_field(login_user_form.next) }}
-              {{ render_field(login_user_form.submit, class='ui button large fluid green') }}
+    <h2 class="ui custom-image header">
+      <div class="content">
+          <h3 class="ui header centered" style="margin-top:5px; color:teal">Log-in to your account</h3>
+      </div>
+    </h2>
+    <!-- Custom class in order to remove a bug that mars the appearance -->
+    <form action="{{ url_for_security('login') }}" method="POST" name="login_user_form" class="ui large {{selected_color}} link card form custom" style="width: 100%">
+      {{ login_user_form.hidden_tag() }}
+
+      <div class="ui stacked secondary segment" style="margin-top: 0px; border-width: 0px">
+        {{ render_field_with_errors(login_user_form.email) }}
+        {{ render_field_with_errors(login_user_form.password) }}
+        <!--
+        <div class="field">
+            {{ render_field_with_errors(login_user_form.remember, class="ui checkbox") }}
         </div>
+        -->
+        {{ render_field(login_user_form.next) }}
+        {{ render_field(login_user_form.submit, class='ui button large fluid green') }}
+      </div>
     </form>
 
     <div class="ui message">
-          New to us? <a href="{{url_for_security('register')}}">Register</a>
+        New to us? <a href="{{url_for_security('register')}}">Register</a>
     </div>
-
 
   </div>
 </div>
