--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -1,16 +1,20 @@
 {% extends 'layout.html' %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 
+{% set selected_color = random_color() %}
+
 {% block content %}
     <div class="ui middle aligned center aligned grid">
       <div class="column custom-column">
-          <h2 class="ui custom-image header">
-            <div class="content">
-             Welcome to the KnowledgeBase! Please register here.
-            </div>
-          </h2>
-          <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form" class="ui large form">
-          <div class="ui stacked secondary  segment">
+        <h2 class="ui custom-image header">
+          <div class="content">
+            <h3 class="ui header centered" style="margin-top:5px; color:teal">Please register here</h3>
+          </div>
+        </h2>
+        <!-- Custom class in order to remove a bug that mars the appearance -->
+        <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form" class="ui large {{selected_color}} link card form custom" style="width: 100%">
+
+        <div class="ui stacked secondary segment" style="border-width: 0px">
           {{ register_user_form.hidden_tag() }}
           {{ render_field_with_errors(register_user_form.name) }}
           {{ render_field_with_errors(register_user_form.email) }}
@@ -19,6 +23,6 @@
             {{ render_field_with_errors(register_user_form.password_confirm) }}
           {% endif %}
           {{ render_field(register_user_form.submit, class='ui button large fluid green') }}
-          </div>
-          </form>
+        </div>
+        </form>
 {% endblock %}
