--- a/app/templates/knowledgebase/question.html
+++ b/app/templates/knowledgebase/question.html
@@ -90,8 +90,12 @@ function vote_answer_down(answer_id) {
 {% if answers.all()|length > 0 %}
       {% for answer in answers %}
 
-        {% set vote_status = current_user.user_vote_status_on_answer(answer.id) %}
-        {{ac.answer_card(answer, current_user, vote_status)}}
+        {% if current_user.is_authenticated %}
+          {% set vote_status = current_user.user_vote_status_on_answer(answer.id) %}
+          {{ac.answer_card(answer, current_user, vote_status)}}
+        {% else %}
+          {{ac.answer_card(answer, current_user, 0)}}
+        {% endif %}
 
       {% endfor %}
 
